# OpenCANBox

./: .gitignore  CMakeLists.txt  linker.ld  linkerbl.ld  stm32f1.cfg  stm32f1dbg.cfg
cmake/: libopencm3.cmake  rtos.cmake  toolchain.cmake
inc/: can.h  filters.h  gpio.h  ipc_print.h  main.h
rtos/config/: FreeRTOSConfig.h
src/: can.c  filters.c  gpio.c  ipc_print.c  main.c
